--- a/chat_system_api/Gemfile
+++ b/chat_system_api/Gemfile
@@ -36,6 +36,9 @@ gem "bootsnap", require: false
 # gem "rack-cors"
 
 gem 'active_model_serializers'
+gem 'elasticsearch-rails', "< 7.10"
+gem 'elasticsearch-model', "< 7.10"
+
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
