feat: Add periodic job execution with Sidekiq and cron
- Added `whenever` gem for scheduling jobs
- Configured `whenever` to run `UpdateCountsJob` every hour
- Created `cron_job.sh` script to set up and start cron in Docker container
- Added Sidekiq Web UI to `routes.rb` for monitoring Sidekiq jobs
- Verified job scheduling and execution via crontab and Sidekiq Web UI

--- a/chat_system_api/Dockerfile
+++ b/chat_system_api/Dockerfile
@@ -2,11 +2,13 @@
 
 FROM ruby:3.2.4
 
-# Install dependencies
-RUN apt-get update -qq && apt-get install -y build-essential libpq-dev nodejs
-
 # Set working directory
 WORKDIR /app
+
+# Install required packages
+RUN apt-get update -qq && \
+    apt-get install --no-install-recommends -y build-essential default-libmysqlclient-dev git libpq-dev nodejs libvips pkg-config cron && \
+    rm -rf /var/lib/apt/lists/*
 
 # Copy Gemfile and Gemfile.lock
 COPY Gemfile /app/Gemfile
@@ -22,6 +24,11 @@ COPY . /app
 COPY entrypoint.sh /usr/bin/
 RUN chmod +x /usr/bin/entrypoint.sh
 
+# Copy cron job script
+COPY cron_job.sh /usr/bin/cron_job.sh
+RUN chmod +x /usr/bin/cron_job.sh
+
+
 # Ensure the working directory has correct permissions
 RUN chown -R root:root /app
 
@@ -33,4 +40,5 @@ EXPOSE 3000
 
 # Start the server in development mode
 ENTRYPOINT ["entrypoint.sh"]
-CMD ["rails", "server", "-b", "0.0.0.0"]
+# Start cron and Rails server
+CMD ["sh", "-c", "/usr/bin/cron_job.sh && bundle exec rails server -b 0.0.0.0"]
