--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,9 +59,27 @@ services:
       MYSQL_DATABASE: chat_system_api_development
       RAILS_ENV: development
       ELASTICSEARCH_HOST: http://elasticsearch:9200
+      REDIS_URL: redis://redis:6379/0
     volumes:
       - ./chat_system_api:/app
       - /app/tmp
     stdin_open: true
     tty: true
+
+  sidekiq:
+    build:
+      context: ./chat_system_api
+      dockerfile: Dockerfile
+    command: bundle exec sidekiq
+    depends_on:
+      - api
+      - redis
+    environment:
+      MYSQL_HOST: db
+      MYSQL_USER: root
+      MYSQL_PASSWORD: rootpassword
+      MYSQL_DATABASE: chat_system
+      RAILS_ENV: development
+    volumes:
+      - ./chat_system_api:/app
 
