--- a/chat_system_api/Gemfile
+++ b/chat_system_api/Gemfile
@@ -38,7 +38,9 @@ gem "bootsnap", require: false
 gem 'active_model_serializers'
 gem 'elasticsearch-rails', "< 7.10"
 gem 'elasticsearch-model', "< 7.10"
-
+gem 'sidekiq'
+gem 'whenever', require: false
+gem 'rack-cors'
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
