feat: make asynchronous chat and message creation using Sidekiq workers
- Added Sidekiq and Redis gems to Gemfile for background job processing
- Manually created ChatCreationWorker and MessageCreationWorker classes in app/workers
- Updated ChatsController and MessagesController to enqueue jobs using Sidekiq workers
- Configured Docker Compose to include Redis and Sidekiq services
- Enabled AOF persistence in Redis for improved durability

--- a/chat_system_api/Dockerfile
+++ b/chat_system_api/Dockerfile
@@ -40,5 +40,6 @@ EXPOSE 3000
 
 # Start the server in development mode
 ENTRYPOINT ["entrypoint.sh"]
-# Start cron and Rails server
-CMD ["sh", "-c", "/usr/bin/cron_job.sh && bundle exec rails server -b 0.0.0.0"]
+
+# Start the server
+CMD ["rails", "server", "-b", "0.0.0.0"]
