--- a/chat_system_api/Gemfile
+++ b/chat_system_api/Gemfile
@@ -41,6 +41,8 @@ gem 'elasticsearch-model', "< 7.10"
 gem 'sidekiq'
 gem 'whenever', require: false
 gem 'rack-cors'
+gem 'redis'
+
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
