--- a/chat_system_api/Gemfile
+++ b/chat_system_api/Gemfile
@@ -39,9 +39,12 @@ gem 'active_model_serializers'
 gem 'elasticsearch-rails', "< 7.10"
 gem 'elasticsearch-model', "< 7.10"
 gem 'sidekiq'
+gem 'sidekiq-unique-jobs'
 gem 'whenever', require: false
 gem 'rack-cors'
 gem 'redis'
+gem 'kaminari'
+gem 'active_model_serializers'
 
 
 group :development, :test do
